OldArchive/dbc028d3f6f6c42f5aaa47fdbd2076de-ff683aff19d685e086e79e4ef634f9fb/output
main.cpp:7:16: error: invalid use of 'this' outside of a non-static member function
        typeid(this);
               ^
main.cpp:8:45: error: invalid use of 'this' outside of a non-static member function
        static_assert(std::is_same<decltype(this),A*>(), "");
                                            ^
2 errors generated.
